--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/kyotar/MarkDown_CSS">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/kyotar/MarkDown-CSS">View on GitHub</a>
 
           <h1 id="project_title">Markdown css</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/kyotar/MarkDown_CSS/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/kyotar/MarkDown_CSS/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/kyotar/MarkDown-CSS/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/kyotar/MarkDown-CSS/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -31,37 +31,26 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a name="mdcss" class="anchor" href="#mdcss"><span class="octicon octicon-link"></span></a>md.css</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<h2>
+<a name="%E8%AA%AC%E6%98%8E" class="anchor" href="#%E8%AA%AC%E6%98%8E"><span class="octicon octicon-link"></span></a>説明</h2>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>Markdownなどの素のHTMLを見やすく表示できるCSSです。</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h1>
+<a name="markdown%E4%BB%A5%E5%A4%96%E3%81%AB%E5%AF%BE%E5%BF%9C%E3%81%97%E3%81%A6%E3%81%84%E3%82%8B%E3%82%BF%E3%82%B0" class="anchor" href="#markdown%E4%BB%A5%E5%A4%96%E3%81%AB%E5%AF%BE%E5%BF%9C%E3%81%97%E3%81%A6%E3%81%84%E3%82%8B%E3%82%BF%E3%82%B0"><span class="octicon octicon-link"></span></a>Markdown以外に対応しているタグ</h1>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<ul>
+<li>section</li>
+<li>aside</li>
+<li>色指定(.red, .geen, .gray)</li>
+<li>小さい文字(.small)</li>
+</ul><h2>
+<a name="%E5%A4%89%E6%9B%B4%E5%B1%A5%E6%AD%B4" class="anchor" href="#%E5%A4%89%E6%9B%B4%E5%B1%A5%E6%AD%B4"><span class="octicon octicon-link"></span></a>変更履歴</h2>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>2013.12.09 -Github公開(ver 1.4)</p>
       </section>
     </div>
 
